# PostMatch

./: README.md
projects/api/: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
projects/api/config/: settings.py
projects/api/myapp/: apps.py  featch_test.py  models.py  serializers.py  urls.py  views.py
projects/api/myapp/management/commands/: fetch_goals.py  fetch_goals_manual.py  fetch_matches.py  fetch_players.py  (+4 more)
projects/api/myapp/migrations/: 0002_alter_post_table.py  0003_alter_account_profile_image.py  0004_alter_post_table.py  0005_alter_team_coach_id.py  0006_alter_team_coach_name.py  0007_alter_team_founded_year_alter_team_venue.py  0008_alter_account_profile_image.py  0009_player_is_active_player_name_ja_and_more.py  0010_alter_player_position.py  0011_player_short_number.py  0012_rename_short_number_player_shirt_number.py  0013_alter_player_last_updated_at_alter_player_name_and_more.py  0014_post_is_highlight.py  0015_alter_post_is_highlight_goal.py  0016_alter_goal_assist_player.py  0017_rename_injurytime_goal_additional_time.py  0018_player_is_national_player_national_shirt_number.py  0019_alter_team_crest_image_url_alter_team_season_id.py  0020_alter_team_coach_name_ja_alter_team_venue_ja.py  0021_alter_team_tla.py  0022_alter_match_competition_id_alter_match_matchday_and_more.py  0023_match_is_national_player_national_team_id.py  0024_goal_is_valid.py  0025_alter_goal_is_valid.py  0026_alter_team_tla.py  0027_player_competition_id.py  0028_standing.py  0029_alter_standing_unique_together_standing_season_year.py  0030_alter_standing_unique_together.py  0031_alter_standing_unique_together.py  0032_standing_created_at_standing_updated_at.py  0033_goal_created_at_goal_updated_at_and_more.py  0034_match_season_year.py  0035_rename_last_updated_at_player_api_updated_at_and_more.py  0036_rename_last_updated_at_team_api_updated_at_and_more.py  0037_alter_goal_season_id.py  0038_alter_goal_additional_time.py  0039_remove_team_crest_badge_image_team_badge_image_and_more.py  0040_rename_badge_image_team_badge_name_and_more.py  0041_alter_team_area_id_alter_team_competition_id.py  (+6 more)
projects/api/mysite/: settings.py  urls.py  wsgi.py
projects/api/render/: middleware.py  serializers.py
projects/api/render/migrations/: 0001_initial.py
(+130 files in other folders)
