[tool.poetry]
name = "postmatch"
version = "0.1.0"
description = ""
authors = ["Kota Oshiro <g.g.gaaaaaaaame@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
gunicorn = "^21.2.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
