[tool.poetry]
name = "postmatch"
version = "0.1.0"
description = ""
authors = ["Kota Oshiro <g.g.gaaaaaaaame@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
gunicorn = "^21.2.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
argon2-cffi= "^21.3.0"
argon2-cffi-bindings= "^21.2.0"
asgiref = "^3.6.0"
certifi = "^2022.12.7"
charset-normalizer = "^3.1.0"
click = "^8.1.3"
cloudinary = "^1.33.0"
colorama = "^0.4.6"
distlib = "^0.3.6"
django-cloudinary-storage = "^0.3.0"
djangorestframework = "^3.14.0"
filelock = "^3.12.0"
idna = "^3.4"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.2"
numpy = "^1.24.3"
pandas = "^2.0.1"
Pillow = "^9.5.0"
platformdirs = "^3.5.1"
protobuf = "^3.20.3"
pycparser = "^2.21"
pymemcache = "^4.0.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
requests = "^2.28.2"
six = "^1.16.0"
sqlparse = "^0.4.4"
typing_extensions = "^4.5.0"
tzdata = "^2023.3"
urllib3 = "^1.26.15"
Werkzeug = "^2.3.2"
whitenoise = "^6.4.0"
WTForms = "^3.0.1"
django-cors-headers = "^3.10.0"
djoser = "^2.1.0"
django-rest-framework-social-oauth2 = "^1.1.0"
social-auth-app-django = "^4.0.0"
django-oauth-toolkit = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^4.0.0"
pipenv = "^2023.6.2"
virtualenv = "^20.23.0"
virtualenv-clone = "0.5.7"








